Fixed Tramp Section display on mobile devices.

--- a/resources/js/components/TrampSection/TrampSection.module.scss
+++ b/resources/js/components/TrampSection/TrampSection.module.scss
@@ -17,7 +17,7 @@
   &.expanded {
     margin-bottom: 2em;
     margin-top: 1em;
-    max-height: 100vh;
+    max-height: 500vh;
     overflow: visible;
   }
 }
